# vita

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/client/src/: main.rs
crates/core/server/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  main.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/scheduler/src/executor/: mod.rs  task.rs
crates/scheduler/src/scheduler/: macros.rs  mod.rs  schedule.rs
crates/scheduler/src/time/: consts.rs  mod.rs  timespan.rs  timestamp.rs  ts_components.rs  weekday.rs
crates/scheduler/tests/: async_executor.rs  scheduler_test.rs  test.rs  test_script.sh  thread_executor.rs
crates/socket/: Cargo.toml
crates/socket/src/: bytes.rs  client.rs  connection.rs  error.rs  lib.rs  macros.rs  request.rs  response.rs  result.rs  signals.rs
